[WEB] PR #102 Rearrange Charts

--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -4,7 +4,14 @@
   margin-bottom: 10px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  position: relative;
   background: linear-gradient(to right, #26619c, #3498db);
+}
+
+.headerContainer {
+  display: flex;
+  align-items: center;
 }
 
 .title {
