--- a/src/website/views/components/VoyagePageTemplate/VoyagePageStyles.css
+++ b/src/website/views/components/VoyagePageTemplate/VoyagePageStyles.css
@@ -3,59 +3,97 @@
     flex-direction: column;
     background-color: #3498db;
     color: white;
-    font-family: 'Verdana, Geneva, sans-serif';
+    font-family: 'Switzer, sans-serif';
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     position: relative;
 }
 
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: #2c3e50;
-    min-height: 300px;
-    position: relative;
-}
-
-.image {
-    width: 40%;
-    height: 200%;
-    position: absolute;
-    top: 20%;
-    left: 25%;
-    transform: translateX(-50%);
-}
-
-.headerText {
-    font-size: 2.5em;
-    font-weight: bold;
-    margin: 1;
-    z-index: 1;
-    position: relative;
-    right: -10%;
-}
-
 .descBox {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     padding: 20px;
     background-color: #ecf0f1;
-    color: #2c3e50;
+    color: #092e4e;
     font-size: 1em;
     width: 65%;
-    box-sizing: border-box;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .desc {
-    text-align: center;
+    text-align: left;
     width: 100%;
     font-size: 0.9em;
     word-break: break-word;
 }
+
+.spatialCoverageContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 20px 0;
+    color: #092e4e;
+    padding-top: 45px;
+}
+
+.spatialCoverageTitle {
+    font-size: 5em;
+    margin-bottom: 40px;
+    width: 100%;
+    color: #092e4e;
+}
+
+.CoverageItem {
+    margin-right: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.CoverageContent {
+    margin-top: 20px;
+    color: #092e4e;
+}
+
+.dataSetHeader {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+    color: #00263e;
+    background-color: #3498db;
+    padding: 20px 0;
+    width: 100%;
+}
+
+.accordionContainer {
+    background-color: #7a8b99;
+}
+
+.accordionSummary {
+    font-family: 'Switzer, sans-serif';
+    color: #00263e;
+}
+
+.accordionDetails {
+    background-color: #7a8b99;
+    color: #00263e;
+    font-family: 'Switzer, sans-serif';
+}
+
+* {
+    font-family: 'Switzer, sans-serif';
+}
+
