--- a/src/website/views/components/Polaris/PolarisContainer.module.css
+++ b/src/website/views/components/Polaris/PolarisContainer.module.css
@@ -1,24 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Switzer:wght@400;700&display=swap');
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Switzer, sans-serif';
+    font-family: 'Switzer', sans-serif;
     color: #092e4e;
-  }
-  
-  .description {
+}
+
+.description {
     text-align: left;
     max-width: 800px;
     margin: 20px;
-  }
-  
-  .dataSetsContainer {
+}
+
+.dataSetsContainer {
     width: 800px;
     display: flex;
     flex-direction: column;
-  }
-  
-  .dataSetHeader {
+}
+
+.dataSetHeader {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,17 +29,17 @@
     color: white;
     background-color: #00263e;
     padding: 20px 0;
-  }
-  
-  .accordionWrapper {
+}
+
+.accordionWrapper {
     margin-bottom: 0;
-  }
-  
-  .accordionWrapper:last-child {
+}
+
+.accordionWrapper:last-child {
     margin-bottom: 0;
-  }
-  
-  .spatialCoverageContainer {
+}
+
+.spatialCoverageContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -47,25 +49,28 @@
     margin: 20px;
     border-bottom: 1px solid black;
     border-top: 1px solid black;
-    padding-bottom: 20px;
+    padding-bottom: px;
     padding-top: 45px;
-  }
-  
-  .spatialCoverageTitle {
+}
+
+.spatialCoverageTitle {
     width: 100%;
     font-weight: bold;
     margin-bottom: 16px; 
-  }
-  
-  .coverageItem {
+    margin-left: 15px;
+}
+
+.coverageItem {
     margin-right: 20px;
     margin-bottom: 8px; 
     display: flex;
     flex-direction: column;
     gap: 16px; 
-  }
-  
-  .coverageContent {
+    margin-left: 15px;
+}
+
+.coverageContent {
     margin-bottom: 16px; 
-  }
+}
+
   
