--- a/src/website/pages/style.module.css
+++ b/src/website/pages/style.module.css
@@ -11,10 +11,36 @@
   padding-left: 10px;
 }
 
+.modalContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw;
+  max-width: 800px;
+  background-color: white;
+  border: 2px solid #000;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 90vh;
+}
+
 .polarisContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
   margin-top: 800px;
+}
+
+.loadingSpinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  height: 100px;
+  width: 100px;
 }
