Fixed Header Position and ran npm format and lint

--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -4,12 +4,13 @@
   margin-bottom: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between; 
+  justify-content: flex-start;
   background: linear-gradient(to right, #26619c, #3498db);
 }
 
 .title {
   font-family: Verdana, Geneva, sans-serif;
+  font-weight: 20px;
   color: white;
   margin-left: 20px;
   font-size: 30px;
@@ -22,5 +23,6 @@
 }
 
 .infoButton {
-  margin-right: 20px; 
+  margin-right: 20px;
+  margin-left: auto;
 }
