--- a/src/website/views/components/DropDown/DropDown.module.css
+++ b/src/website/views/components/DropDown/DropDown.module.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Switzer:wght@400;700&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Switzer:wght@400;700&display=swap';
 
 .flexItemContainer {
   flex: 1;
   display: flex;
   justify-content: center;
-  font-family: 'Switzer', sans-serif;
+  font-family: Switzer, sans-serif;
   color: #092e4e;
   font-weight: bold;
 }
@@ -45,14 +45,14 @@
 .accordionSummaryCustom {
   background-color: #d9dddc;
   color: #00263e;
-  font-family: 'Switzer', sans-serif;
+  font-family: Switzer, sans-serif;
   font-weight: bold;
 }
 
 .accordionDetailsCustom {
   background-color: white;
   flex-direction: column;
-  padding: 16px 16px;
-  font-family: 'Switzer', sans-serif;
+  padding: 16px;
+  font-family: Switzer, sans-serif;
   color: #092e4e;
 }
