[WEB] DATA FOR RESEARCHERS (#346)

--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -4,6 +4,7 @@
   margin-bottom: 10px;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   background: linear-gradient(to right, #26619c, #3498db);
 }
 
@@ -19,4 +20,9 @@
 .logo {
   width: 30px;
   margin-left: 50px;
+}
+
+.infoButton {
+  margin-right: 20px;
+  margin-left: auto;
 }
