Filter datapoints by timestamp - Timestamp Filter - Issue #279 (#338)
* implementing component

* redux implementation

* extracting date information from MUI date picker

* working redux implementation

* useState implementation in timestamp component

* working redux + APPLY button implementation

* filter function applied onto prop arrays + RESET button

* fixed bug where calendar shows behind date picker

* format and linter changes

* adjusted width of timestamp filter

* added time field to time picker + redux bug fixes

* removing unecessary constants and comments

* stylistic changes

* working version of filtering with MapsContainer.tsx

* modifying aisships simulation to include differing timestamps

* bug fix of aisships json data for simulation

* added timestamp filtering functionality for aisships

* simulation timestamp adjustment & dashboard filtering bug fix

* bug fix, redux refactoring, format & lint

* Slight adjustments to timestamp button; fixed merge conflicts

* Suppress Hydration Warning

* Added package-lock.json file

---------

Co-authored-by: John Ahn <john.ahn.es@gmail.com>

--- a/src/website/pages/style.module.css
+++ b/src/website/pages/style.module.css
@@ -11,6 +11,17 @@
   padding-left: 10px;
 }
 
+.topRight {
+  position: absolute;
+  z-index: 10000000000;
+  top: 2vh;
+  right: 4vw;
+}
+
+.parent {
+  position: relative;
+}
+
 .modalContent {
   position: absolute;
   top: 50%;
