[WEB] PR #102 Rearrange Charts (#282)
* [WEB] PR #102 Rearrange Charts

* Removed conflicts

* added rearrangement and others

* oops trying again

* added persist for graphs after reload

* addressed pr comments

* changed header slightly

* Remove additional comments

* Lint checks and modifications to header

---------

Co-authored-by: fyang151 <fyang151@gmail.com>

--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -1,16 +1,25 @@
+@import 'https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap';
+
 .header {
   padding: 5px;
   margin: -10px;
   margin-bottom: 10px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
+  position: sticky;
   background: linear-gradient(to right, #26619c, #3498db);
+  z-index: 1002;
+}
+
+.headerContainer {
+  display: flex;
+  align-items: center;
 }
 
 .title {
-  font-family: Verdana, Geneva, sans-serif;
-  font-weight: 20px;
+  font-family: Raleway, sans-serif;
+  font-weight: 500;
   color: white;
   margin-left: 20px;
   font-size: 30px;
@@ -23,6 +32,7 @@
 }
 
 .infoButton {
+  display: flex;
   margin-right: 20px;
   margin-left: auto;
 }
