--- a/src/website/pages/style.module.css
+++ b/src/website/pages/style.module.css
@@ -7,7 +7,7 @@
 }
 
 .dashboardContainer {
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-left: 10px;
 }
 
@@ -15,11 +15,7 @@
   position: absolute;
   z-index: 10000000000;
   top: 2vh;
-  right: 4vw;
-}
-
-.parent {
-  position: relative;
+  right: 10vw;
 }
 
 .modalContent {
