--- a/src/website/views/components/DropDown/dropdown.module.css
+++ b/src/website/views/components/DropDown/dropdown.module.css
@@ -1,18 +1,14 @@
-@import 'https://fonts.googleapis.com/css2?family=Switzer:wght@400;700&display=swap';
-
-.center {
-  text-align: center;
-}
+@import 'https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap';
 
 .iconButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Switzer, sans-serif;
+  font-family: Verdana, sans-serif;
   padding: 3px;
   border: 2px solid white;
   border-radius: 5px;
-  width: 100%;
+  width: 130px;
   height: 50px;
   color: white;
   float: right;
@@ -31,23 +27,22 @@
 }
 
 .iconButtonOpen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Switzer, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
   padding: 3px;
   border: 2px solid white;
   border-radius: 5px;
-  width: 100%;
+  width: 130px;
   height: 50px;
   float: right;
   margin-right: 20px;
   box-sizing: border-box;
+  text-align: center;
+  background-color: white;
+  color: #3498db;
+  cursor: pointer;
   transition: 0.3s ease;
   transform: none;
   user-select: none;
-  background-color: white;
-  color: #3498db;
 }
 
 .dropdownActive {
@@ -66,29 +61,42 @@
 }
 
 .dropdownMenu {
-  margin: 25px;
+  margin: 5px;
   position: absolute;
-  width: 300px;
-  right: 30px;
-  top: 40px;
+  right: 3px;
+  top: 60px;
   z-index: 1000;
   background-color: white;
   border-bottom: 2px #3498db solid;
   border-radius: 5px;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 15px;
 }
 
 .dropdownItem {
-  padding: 8px;
-  width: 100%;
-  right: 10px;
+  text-transform: capitalize;
+  display: grid;
+  grid-template-columns: 90px auto;
+  font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 150px;
+  padding: 10px;
+  height: 40px;
+  background-color: white;
+  border: 2px white solid;
+  border-radius: 5px;
+  color: #3498db;
+  align-items: center;
+  transform: none;
+  user-select: none;
+  cursor: pointer;
 }
 
-.dropdownBtn {
-  margin-top: 5px;
-  margin-right: 15px;
-  left: 20px;
-  width: 40%;
+.dropdownItem:hover {
+  background-color: whitesmoke;
+}
+
+.dragDropIndicator {
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  right: 15px;
 }
