--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -24,3 +24,22 @@ nav.md-nav.md-nav--secondary > .md-nav__list > .md-nav__item > .md-nav__link:hov
 nav.md-nav.md-nav--secondary > .md-nav__list > .md-nav__item > .md-nav__link.md-nav__link--passed.md-nav__link--active {color: #2f97ec;}
 .md-nav__link--passed {color: var(--md-table-of-contents-link-color);}
 .md-nav__link--passed:hover {color: #2f97ec;}
+
+/* Styling for embedded videos*/
+.video-wrapper {
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+}
+.video-wrapper > iframe {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
