add test node navigate

--- a/src/website/views/components/DropDown/dropdown.module.css
+++ b/src/website/views/components/DropDown/dropdown.module.css
@@ -49,54 +49,4 @@
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
-  transition: 0.3s ease;
-}
-
-.dropdownInactive {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-45px);
-  transition: 0.3s;
-  pointer-events: none;
-}
-
-.dropdownMenu {
-  margin: 5px;
-  position: absolute;
-  right: 3px;
-  top: 60px;
-  z-index: 1000;
-  background-color: white;
-  border-bottom: 2px #3498db solid;
-  border-radius: 5px;
-}
-
-.dropdownItem {
-  text-transform: capitalize;
-  display: grid;
-  grid-template-columns: 90px auto;
-  font-size: 18px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  width: 150px;
-  padding: 10px;
-  height: 40px;
-  background-color: white;
-  border: 2px white solid;
-  border-radius: 5px;
-  color: #3498db;
-  align-items: center;
-  transform: none;
-  user-select: none;
-  cursor: pointer;
-}
-
-.dropdownItem:hover {
-  background-color: whitesmoke;
-}
-
-.dragDropIndicator {
-  font-size: 20px;
-  font-weight: bold;
-  position: absolute;
-  right: 15px;
-}
+  transition: 0.3s eas
