--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -1,38 +1,32 @@
-@import 'https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap';
-
 .header {
-  padding: 5px;
-  margin: -10px;
-  margin-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: sticky;
-  background: linear-gradient(to right, #26619c, #3498db);
-  z-index: 1002;
-}
-
-.headerContainer {
-  display: flex;
-  align-items: center;
+  margin: 12px 20px;
 }
 
 .title {
-  font-family: Raleway, sans-serif;
-  font-weight: 500;
-  color: white;
-  margin-left: 20px;
-  font-size: 30px;
-  letter-spacing: 2px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.title h1 {
+  margin-top: 6px;
+  font-weight: 200;
 }
 
 .logo {
-  width: 30px;
-  margin-left: 50px;
+  height: 50px;
 }
 
-.infoButton {
+.links {
+  margin-top: 6px;
   display: flex;
-  margin-right: 20px;
-  margin-left: auto;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.links h2 {
+  font-weight: 200;
 }
