--- a/src/website/styles/globals.css
+++ b/src/website/styles/globals.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   background-color: #090909;
   color: #ffffff;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 html,
