--- a/src/website/views/components/LineChart/lineChartStyles.module.css
+++ b/src/website/views/components/LineChart/lineChartStyles.module.css
@@ -39,3 +39,14 @@
   /* the height of the graph including the legens is about 330. there are better ways to do this dynamically. i am too lazy to. */
   height: 330px;
 }
+
+.noData {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #6b6b6b;
+  font-size: 16px;
+  border: 1px solid #6b6b6b;
+  border-radius: 4px;
+}
