--- a/src/website/views/components/Stats/stats.module.css
+++ b/src/website/views/components/Stats/stats.module.css
@@ -18,7 +18,6 @@
 
 .summary {
   font-size: 24px;
-  font-weight: bold;
   margin-top: 8px;
 }
 
@@ -31,10 +30,6 @@
 .lineCharts {
   overflow-y: auto;
   scrollbar-width: none;
-}
-
-.dropdown {
-  flex: 1;
 }
 
 .dropdownButton {
@@ -62,12 +57,15 @@
 }
 
 .dropdownItem {
-  height: 60px;
-  padding: 8px;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  padding-right: 32px;
+  gap: 8px;
   margin: 4px 0;
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 4px;
   width: 100%;
   right: 10px;
-  background-color: #262626;
   user-select: none;
 }
