--- a/src/website/views/components/Map/map.module.css
+++ b/src/website/views/components/Map/map.module.css
@@ -24,3 +24,12 @@
   cursor: pointer;
   accent-color: #2563eb;
 }
+
+.loading {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 500;
+}
