--- a/src/website/views/components/Stats/stats.module.css
+++ b/src/website/views/components/Stats/stats.module.css
@@ -63,7 +63,7 @@
   padding-right: 32px;
   gap: 8px;
   margin: 4px 0;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid var(--accent-color-2);
   border-radius: 4px;
   width: 100%;
   right: 10px;
