--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -20,11 +20,18 @@
   height: 50px;
 }
 
-.links {
+.right {
   margin-top: 6px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 20px;
   font-size: 22px;
   font-weight: 200;
+}
+
+.themeToggle {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
