--- a/src/website/views/components/Stats/stats.module.css
+++ b/src/website/views/components/Stats/stats.module.css
@@ -63,25 +63,31 @@
 }
 
 .dropdownMenu {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 8px;
   position: absolute;
   border-radius: 4px;
   margin-top: 8px;
   padding: 8px;
   z-index: 1000;
+  min-width: 400px;
 }
 
 .dropdownItem {
   display: flex;
   align-items: center;
   padding: 12px;
-  padding-right: 32px;
   gap: 8px;
-  margin: 4px 0;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 4px;
-  width: 100%;
-  right: 10px;
   user-select: none;
+}
+
+.dropdownItemFull {
+  grid-column: 1 / -1;
+}
+
+.dropdownItemHalf {
+  grid-column: span 1;
 }
