--- a/src/website/styles/variables.css
+++ b/src/website/styles/variables.css
@@ -7,6 +7,14 @@
   --dark-accent-2: white;
   --dark-accent-3: #6b6b6b;
 
+  /* --blue: #0059EB;
+  --purple: #8F42D9;
+  --pink: #E7006E;
+  --red: #E60F26;
+  --yellow: #FF9200;
+  --green: #009534;
+  --teal: #00937C; */
+
   --accent-color-1: var(--light-accent-1);
   --accent-color-2: var(--light-accent-2);
   --accent-color-3: var(--light-accent-3);
