add downloads page, revamp about page, install gsap for animations, minor css change to header

--- a/src/website/views/components/About/about.module.css
+++ b/src/website/views/components/About/about.module.css
@@ -1,22 +1,127 @@
-.aboutContainer {
-  display: flex;
-  justify-content: center;
+/* 
+.page {
   width: 100%;
-}
+  background: #000;
+  color: white;
+} */
 
-.about {
+/* main layout container */
+.container {
+  height: fit-content;
+  padding-top: 15vh;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-direction: row;
+  gap: 72px;
   max-width: 1000px;
 }
 
-.about h2 {
-  width: 100%;
-  font-weight: 500;
-  font-size: 32px;
+/* left image column */
+.imageColumn {
+  display: flex;
+  flex-direction: column;
+  gap: 472px;
 }
 
-.about p {
-  font-size: 18px;
+.imageCard {
+  height: 520px;
+  width: 460px;
+  flex-shrink: 0;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* make sticky columns share the same sticky offset/height */
+.progress,
+.textColumn {
+  position: sticky;
+  top: 15vh;
+  height: 520px;
+}
+
+/* progress bar */
+.progress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.progressFadeTop {
+  height: 10%;
+  width: 2px;
+  background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+}
+
+.progressNumber {
+  display: flex;
+}
+
+.progressLineWrap {
+  position: relative;
+  height: 100%;
+  width: 2px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.progressDot {
+  position: absolute;
+  bottom: 0;
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 999px;
+}
+
+/* right text section */
+.textColumn {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+
+.headingRow {
+  display: flex;
+  align-items: baseline;
+  gap: 16px;
+  margin-top: 44px;
+}
+
+.aboutTitle {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.bodyText {
+  line-height: 1.5;
+  color: #8b8b8b;
+}
+
+/* Dataset link section */
+.datasetSection {
+  height: 100dvh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.datasetAnchor {
+  color: inherit;
+  text-decoration: none;
+}
+
+.datasetLink:hover {
+  font-style: italic;
+  text-decoration: underline;
 }
