--- a/src/website/views/components/Header/header.module.css
+++ b/src/website/views/components/Header/header.module.css
@@ -2,7 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 12px 20px;
+  padding: 12px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: #090909;
 }
 
 .title {
