--- a/src/website/views/components/About/about.module.css
+++ b/src/website/views/components/About/about.module.css
@@ -57,7 +57,11 @@
 .progressFadeTop {
   height: 10%;
   width: 2px;
-  background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  background: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 .progressNumber {
