feat: make stats component split-group aware

--- a/src/website/views/components/Stats/stats.module.css
+++ b/src/website/views/components/Stats/stats.module.css
@@ -32,6 +32,11 @@
   scrollbar-width: none;
 }
 
+.splitGroup {
+  display: flex;
+  gap: 8px;
+}
+
 .dropdownButton {
   display: flex;
   align-items: center;
